# Franka_experiments

./: .gitignore  README.md
Real_Robot_scripts/servo-franka/: .gitignore  CMakeLists.txt  dynamic_controller.cpp  dynamic_controller_2.cpp  frankaSavePosition.cpp  kinematic_controller.cpp  kinematic_controller_2.cpp  test_csv.cpp
Real_Robot_scripts/servo-franka/Data/: log_dyn_INIT0_1.csv  log_dyn_INIT0_11.csv  log_dyn_INIT0_12.csv  log_dyn_INIT0_13.csv  log_dyn_INIT0_4.csv  log_dyn_INIT0_6.csv  log_dyn_INIT0_9.csv  log_dyn_PI0_12.csv  log_dyn_PI0_13.csv  log_dyn_PI0_2.csv  log_dyn_PI0_6.csv  log_dyn_PI0_8.csv
Real_Robot_scripts/servo-franka/Data2/: log_dyn_INIT0_14.csv  log_dyn_INIT2_0.csv  log_dyn_INIT2_1.csv  log_dyn_INIT2_10.csv  log_dyn_INIT2_11.csv  log_dyn_INIT2_12.csv  log_dyn_INIT2_13.csv  log_dyn_INIT2_14.csv  log_dyn_INIT2_2.csv  log_dyn_INIT2_3.csv  log_dyn_INIT2_4.csv  log_dyn_INIT2_5.csv  log_dyn_INIT2_6.csv  log_dyn_INIT2_7.csv  log_dyn_INIT2_8.csv  log_dyn_INIT2_9.csv  log_dyn_PI2_0.csv  log_dyn_PI2_1.csv  log_dyn_PI2_10.csv  log_dyn_PI2_11.csv  log_dyn_PI2_12.csv  log_dyn_PI2_13.csv  log_dyn_PI2_14.csv  log_dyn_PI2_2.csv  log_dyn_PI2_3.csv  log_dyn_PI2_4.csv  log_dyn_PI2_5.csv  log_dyn_PI2_6.csv  log_dyn_PI2_7.csv  log_dyn_PI2_8.csv  log_dyn_PI2_9.csv
Real_Robot_scripts/servo-franka/Data3/: log_dyn_INIT0_0.csv  log_dyn_INIT0_10.csv  log_dyn_INIT0_14.csv  log_dyn_INIT0_2.csv  log_dyn_INIT0_3.csv  log_dyn_INIT0_5.csv  log_dyn_INIT0_7.csv  log_dyn_INIT0_8.csv  log_dyn_INIT0_l_ki_0.csv  log_dyn_INIT0_l_ki_1.csv  log_dyn_INIT0_l_ki_10.csv  (+12 more)
(+85 files in other folders)
